optimization & remove redundancy
